--- a/ProjectWeb/WebContent/WEB-INF/web.xml
+++ b/ProjectWeb/WebContent/WEB-INF/web.xml
@@ -19,10 +19,10 @@
   </context-param>
   <context-param>
     <param-name>user</param-name>
-    <param-value>16130287@st.hcmuaf.edu.vn</param-value>
+    <param-value>Email</param-value>
   </context-param>
   <context-param>
     <param-name>pass</param-name>
-    <param-value>17051998@</param-value>
+    <param-value>Password</param-value>
   </context-param>
 </web-app>
